--- a/src/components/Colaborador/Colaborador.css
+++ b/src/components/Colaborador/Colaborador.css
@@ -1,4 +1,5 @@
 .colaborador {
+  position: relative;
   width: 280px;
 }
 
@@ -41,4 +42,10 @@
   font-size: 18px;
   line-height: 22px;
   padding: 0 16px;
+}
+
+.deletar {
+  position: absolute;
+  right: -10px;
+  top: -10px;
 }
